@@ -15,9 +15,6 @@ package version filename origin
 separated by whitespace
 
 Compression is determined using magic
-
-!!WARNING!!
-Sometimes the script bails out with an error "Argument list too long" when using Ninka. I have no idea why this happens (it seems Ninka is not always very robust), but restarting the script should fix it.
 '''
 
 import sys, os, magic, string, re, subprocess, shutil
@@ -203,7 +200,7 @@ def extractstrings(srcdir, conn, cursor, package, version, license):
 
 	if license:
 		ninkaversion = "80a290e"
-		ninkaenv = os.environ
+		ninkaenv = os.environ.copy()
 		ninkaenv['PATH'] = ninkaenv['PATH'] + ":/tmp/dmgerman-ninka-%s/comments/comments" % ninkaversion
 	try:
 		while True:
